[tool.poetry]
name = "cookiecutter-templates"
version = "0.1.0"
description = "templates for various projects"
authors = ["y"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
flake8-length = "0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
